commit: add filter script and gradle script